--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -5,6 +5,7 @@
 
 body {
   font-family: 'Quicksand', sans-serif;
+  overflow-x: hidden;
 }
 .container-fluid {
   padding: 0px !important;
@@ -200,7 +201,7 @@ $layout-breakpoint-small: 960px;
     display: flex;
     width: calc(100% - 110px);
     height: 100%;
-    margin: 0 70px 0px 44px;
+    margin: 0 70px 0px 140px;
     .left {
       flex: 2;
       margin-right: 50px;
@@ -232,50 +233,67 @@ $layout-breakpoint-small: 960px;
       }
       .bot {
         margin-top: 19px;
-        .title {
+        display: flex;
+        justify-content: space-between;
+        &_left {
           display: flex;
-          justify-content: space-between;
-          margin-bottom: 18px;
-          align-items: center;
+          justify-content: flex-start;
+          flex-direction: column;
           .hotline {
             font-weight: 500;
             font-size: 19px;
             line-height: 24px;
             flex: 3;
+            margin-bottom: 18px;
           }
+          
+          .content-left {
+            display: flex;
+            ul.block {
+              padding-left: 0px;
+              margin-right: 60px;
+              li {
+                list-style: none;
+                font-size: 12px;
+                line-height: 15px;
+                margin-bottom: 13px;
+                img {
+                  width: 15px;
+                  height: 15px;
+                  margin-right: 11px;
+                }
+              }
+            }
+          }
+        }
+        &_right {
+          display: flex;
+          justify-content: flex-start;
+          flex-direction: column;
           .departments {
-            font-weight: 500;
-            font-size: 12px;
+            font-weight: 600;
+            font-size: 13px;
             line-height: 15px;
-            flex: 1;
+            margin-top: 8px;
+          }
+          ul.block {
+            padding-left: 0px;
+            li {
+              list-style: none;
+              font-size: 12px;
+              line-height: 15px;
+              margin-bottom: 4px;
+            }
           }
         }
         .content {
           display:flex;
           justify-content: space-between;
           margin-left: 0px;
-          .content-left {
-            display: flex;
-            ul.block.end {
-              margin-left: 60px;
-              li {
-                margin-bottom: 13px;
-              }
-            }
-          }
+          
           ul.block {
             padding: 0px;
-            li {
-              list-style: none;
-              font-size: 12px;
-              line-height: 15px;
-              margin-bottom: 13px;
-              img {
-                width: 15px;
-                height: 15px;
-                margin-right: 11px;
-              }
-            }
+            
           }
           ul.block.end {
             li {
@@ -286,74 +304,78 @@ $layout-breakpoint-small: 960px;
       }
     }
     .right {
+      padding-left: 100px;
       flex: 1;
-      background: #fff;
-      max-width: 251px;
-      max-height: 251px;
-      box-shadow: -4px 4px 18px rgba(0, 0, 0, 0.25);
-      display: flex;
-      text-align: center;
-      flex-direction: column;
-      .title {
-        padding-top: 41px;
-        width:100%;
+      .form {
+        background: #fff;
+        max-width: 300px;
+        max-height: 300px;
+        box-shadow: -4px 4px 18px rgba(0, 0, 0, 0.25);
+        display: flex;
         text-align: center;
-        margin-bottom: 31px;
-        p {
-          margin: 0px;
-          font-size: 19px;
-          line-height: 24px;
-        }
-        &--bold {
-          font-weight: 500;
-        }
-      }
-      .email {
-        display: flex;
-        margin: 0px 22px 29px 22px;
-        input {
-          background: #F1F1F1;
-          border: none;
-          height: 31px;
-          width: 100%;
-          flex: 1;
-          padding-left: 8px;
-        }
-        input::placeholder {
-          font-weight: 500;
-          font-size: 12px;
-          line-height: 15px;
-          color: #000000;
-        }
-        span.btn {
-          background: #000000;
+        flex-direction: column;
+        .title {
+          padding-top: 41px;
+          width:100%;
           text-align: center;
-          color: white;
-          width: 69px;
-          height: 31px;
-          font-size: 12px;
-          line-height: 15px;
-          padding: 8px;
-          cursor: pointer;
-          border-radius: 0;
+          margin-bottom: 31px;
+          p {
+            margin: 0px;
+            font-size: 19px;
+            line-height: 24px;
+          }
+          &--bold {
+            font-weight: 500;
+          }
         }
-      }
-      .social {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 41px;
-        img {
-          margin-right: 31px;
-          width: 22px;
-          height: 22px;
+        .email {
+          display: flex;
+          margin: 0px 22px 29px 22px;
+          input {
+            background: #F1F1F1;
+            border: none;
+            height: 31px;
+            width: 100%;
+            flex: 1;
+            padding-left: 8px;
+          }
+          input::placeholder {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 15px;
+            color: #000000;
+          }
+          span.btn {
+            background: #000000;
+            text-align: center;
+            color: white;
+            width: 69px;
+            height: 31px;
+            font-size: 12px;
+            line-height: 15px;
+            padding: 8px;
+            cursor: pointer;
+            border-radius: 0;
+          }
+        }
+        .social {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 41px;
+          img {
+            margin-right: 31px;
+            width: 22px;
+            height: 22px;
+          }
         }
       }
     }
+    
   }
   .privacy {
     height: 67px;
     width: 100%;
-    padding: 0px 47px;
+    padding: 0px 130px;
     background: #324041;
     display: flex;
     color: #fff;
@@ -387,6 +409,69 @@ $layout-breakpoint-small: 960px;
         height: 28px;
         margin-right: 34px;
       }
+    }
+  }
+}
+
+.product_item {
+  min-width: 239px;
+  min-height: 549px;
+  background: #fff;
+  text-align: center;
+  margin: 21px;
+  &_image {
+    width: 100%;
+    height: 319px;
+    cursor: pointer;
+  }
+  &_name {
+    font-size: 20px;
+    line-height: 25px;
+    margin: 29px 0 15px 0px;
+  }
+  &_price {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  &_ratingstar {
+    width: 25px;
+    height: 25px;
+    margin-right: 3px;
+  }
+  &_btn {
+    margin-top: 15px;
+    border: 1px solid #C4C4C4;
+    width: 164px;
+    height: 38px;
+    margin: 15px auto;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    line-height: 19px;
+    cursor: pointer;
+  }
+  &:hover {
+    box-shadow: -4px 4px 18px rgba(0, 0, 0, 0.25);
+    .product_item_btn {
+      display: flex;
+    }
+  }
+}
+
+.homepage {
+  &_banner {
+    width: 100%;
+  }
+  .category_title {
+    display: flex;
+    font-size: 23px;
+    line-height: 25px;
+    justify-content: center;
+    margin-top: 17px;
+    &--bold {
+      font-weight: 700;
     }
   }
 }
