--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -51,6 +51,11 @@ header.header-wrapper {
       padding: 0px;
       display: flex;
       justify-items: center;
+      align-items: center;
+      input#search {
+        margin-right: 10px;
+        padding-left: 10px;
+      }
       li {
         list-style: none;
         display: inline-block;
@@ -587,6 +592,5 @@ $layout-breakpoint-small: 960px;
   }
   &_product_list {
     min-height: 500px;
-    display: flex;
   }
 }
