--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -87,6 +87,11 @@ header.header-wrapper {
       li.cart-icon {
         background: url(../images/header/shopping-cart.png);
       }
+
+      a{
+        width: 24px;
+        height: 24px;
+      }
     }
   };
   .categories {
@@ -431,7 +436,8 @@ $layout-breakpoint-small: 960px;
     cursor: pointer;
   }
   &_name {
-    font-size: 20px;
+    font-size: 24px;
+    font-weight: bold;
     line-height: 25px;
     margin: 29px 0 15px 0px;
   }
@@ -447,7 +453,6 @@ $layout-breakpoint-small: 960px;
   }
   &_btn {
     margin-top: 15px;
-    border: 1px solid #C4C4C4;
     width: 164px;
     height: 38px;
     margin: 15px auto;
@@ -462,6 +467,41 @@ $layout-breakpoint-small: 960px;
     box-shadow: -4px 4px 18px rgba(0, 0, 0, 0.25);
     .product_item_btn {
       display: flex;
+      justify-content: space-between;
+      .detail {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 30px;
+        border: 1px solid #C4C4C4;
+        width: 45%;
+        &:hover{
+          background-color: #c5e5e7;
+          color: #fff;
+        }
+      }
+      .add-to-cart {
+        width: 45%;
+        height: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #C4C4C4;
+
+        .cart {
+          width: 24px;
+          height: 24px;
+          margin-left: 5px;
+          background: url(../images/header/shopping-cart.png);
+        }
+
+        &:hover{
+          background-color: #c5e5e7;
+          color: #fff;
+        }
+      }
     }
   }
 }
