add data, detailPage

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -82,7 +82,7 @@ header.header-wrapper {
         background: url(../images/header/user.png);
       }
       li.like-icon {
-        background: url(../images/header/love.png);
+        background: url(../images/header/favourite.svg);
       }
       li.cart-icon {
         background: url(../images/header/shopping-cart.png);
