--- a/src/containers/PaymentPage/PaymentPage.module.css
+++ b/src/containers/PaymentPage/PaymentPage.module.css
@@ -28,12 +28,12 @@
 
 
 .cartList{
-
+    width: 35%;
 }
 
 .cartItem {
     display: flex;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .itemImg {
@@ -58,22 +58,29 @@
 .itemTitle{
     font-size: 14px;
     font-weight: 700;
-    margin-bottom: 14px;
+    margin-bottom: 10px;
 }
 
 .itemPrice{
     font-size: 14px;
     font-weight: 500;
-    margin-bottom: 14px;
+    margin-bottom: 2px;
 }
 
 .itemAction{
-    width: 115px;
-    height: 22px;
-    border: 1px solid;
+    
+}
+
+.breakLine {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    margin: 3px 0;
+}
+
+.priceItem {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
 }
 
 .btnSub, .btnAdd{
