--- a/src/containers/PaymentPage/PaymentPage.module.css
+++ b/src/containers/PaymentPage/PaymentPage.module.css
@@ -219,3 +219,36 @@
     color: #FFFFFF;
     font-size: 15px;
 }
+
+.errorText {
+    margin-top: 5px;
+    color: red;
+    margin-bottom: 0;
+}
+
+.modalCustom {
+
+}
+
+.titleModal {
+    font-weight: bold;
+    font-size: 18px;
+    color: green;
+    text-align: center;
+}
+
+.wrapbutton {
+    width: 100%;
+    height: 28px;
+    display: flex;
+    /* width: 100%; */
+    justify-content: flex-end;
+    margin-top: 45px;
+}
+
+.btnClose {
+    width: 60px;
+    height: 30px;
+    color: white;
+    background-color: #324041;
+}
