--- a/src/containers/OrderDetailPage/OrderDetailPage.module.css
+++ b/src/containers/OrderDetailPage/OrderDetailPage.module.css
@@ -63,9 +63,10 @@
 }
 
 .cartInfo{
+    margin-top: 20px;
     padding: 35px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    width: 584px;
+    width: 100%;
     height: auto;
 }
 
