--- a/src/containers/ProfilePage/ProfilePage.module.css
+++ b/src/containers/ProfilePage/ProfilePage.module.css
@@ -5,6 +5,8 @@
     padding-left: 113px;
     padding-right: 113px;
     padding-bottom: 54px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .cartTitle{
@@ -165,4 +167,36 @@
     background-color: #324041;
     color: #FFFFFF;
     font-size: 15px;
+}
+
+.errorText {
+    color: red;
+    margin: 0;
+}
+
+.modalCustom {
+
+}
+
+.titleModal {
+    font-weight: bold;
+    font-size: 18px;
+    color: green;
+    text-align: center;
+}
+
+.wrapbutton {
+    width: 100%;
+    height: 28px;
+    display: flex;
+    /* width: 100%; */
+    justify-content: flex-end;
+    margin-top: 45px;
+}
+
+.btnClose {
+    width: 60px;
+    height: 30px;
+    color: white;
+    background-color: #324041;
 }
