--- a/src/containers/OrderDetailPage/OrderDetailPage.module.css
+++ b/src/containers/OrderDetailPage/OrderDetailPage.module.css
@@ -70,6 +70,15 @@
     height: auto;
 }
 
+.cartInfo4{
+    margin-top: 20px;
+    padding: 35px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 500px;
+    height: auto;
+    left: 0px;
+}
+
 .cartInfo2{
     padding: 35px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
